ops/ci/jenkins/jenkins/templates/jenkins-agent-svc.yaml
---
# Source: jenkins/templates/jenkins-agent-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-jenkins-1-27-0-agent
  namespace: jenkins
  labels:
    "app.kubernetes.io/name": 'jenkins'
    "helm.sh/chart": "jenkins-2.1.0"
    "app.kubernetes.io/managed-by": "Helm"
    "app.kubernetes.io/instance": "stable-jenkins-1-27-0"
    "app.kubernetes.io/component": "jenkins-master"
spec:
  ports:
    - port: 50000
      targetPort: 50000
      
      name: slavelistener
  selector:
    "app.kubernetes.io/component": "jenkins-master"
    "app.kubernetes.io/instance": "stable-jenkins-1-27-0"
  type: ClusterIP
