ops/ci/jenkins/jenkins/templates/jenkins-master-svc.yaml
---
# Source: jenkins/templates/jenkins-master-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-jenkins-2-5-3
  namespace: jenkins
  labels:
    "app.kubernetes.io/name": 'jenkins'
    "helm.sh/chart": "jenkins-2.5.4"
    "app.kubernetes.io/managed-by": "Helm"
    "app.kubernetes.io/instance": "stable-jenkins-2-5-3"
    "app.kubernetes.io/component": "jenkins-master"
spec:
  ports:
    - port: 8080
      name: http
      targetPort: 8080
  selector:
    "app.kubernetes.io/component": "jenkins-master"
    "app.kubernetes.io/instance": "stable-jenkins-2-5-3"
  type: ClusterIP
